--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="index.css?1022"> 
  </head> 
  <body>
+  <!-- 背景音乐 -->
+  <audio id="backgroundMusic" autoplay loop>
+      <source src="music/qinghua.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+  </audio>
+
   <div class="nav-box"> 
    <div class="nav-info"> 
     <div class="occlusion"></div> 
@@ -14,7 +20,10 @@
     <h1 class="info-title">清風</h1> 
    </div> 
    <div class="nav-item-boxs"> 
-    <div class="nav-item-box"> <a href="#skill" class="nav-item">我的技能</a> <a href="#record" class="nav-item">联系方式</a> <a href="#site" class="nav-item">社交媒体</a> 
+    <div class="nav-item-box"> 
+     <a href="#skill" class="nav-item">我的技能</a> 
+     <a href="#record" class="nav-item">联系方式</a> 
+     <a href="#site" class="nav-item">社交媒体</a> 
     </div> 
    </div> 
   </div> 
@@ -35,31 +44,31 @@
     <div id="v35" class="skill-list"> 
      <li id="v36" class="item"> <span id="v37" class="name">代练</span> 
       <div id="v38" class="rate-box"> 
-       <div id="v39" class="rate" style="width: 100%;"></div> 
+       <div id="v39" class="rate" style="width: 50%;"></div> 
       </div> </li> 
      <li id="v40" class="item"> <span id="v41" class="name">代送</span> 
       <div id="v42" class="rate-box"> 
-       <div id="v43" class="rate" style="width: 100%;"></div> 
+       <div id="v43" class="rate" style="width: 50%;"></div> 
       </div> </li> 
      <li id="v44" class="item"> <span id="v45" class="name">黑转白</span> 
       <div id="v46" class="rate-box"> 
-       <div id="v47" class="rate" style="width: 100%;"></div> 
+       <div id="v47" class="rate" style="width: 50%;"></div> 
       </div> </li> 
      <li id="v48" class="item"> <span id="v49" class="name">代挂</span> 
       <div id="v50" class="rate-box"> 
-       <div id="v51" class="rate" style="width: 100%;"></div> 
+       <div id="v51" class="rate" style="width: 50%;"></div> 
       </div> </li> 
      <li id="v52" class="item"> <span id="v53" class="name">代充</span> 
       <div id="v54" class="rate-box"> 
-       <div id="v55" class="rate" style="width: 100%;"></div> 
+       <div id="v55" class="rate" style="width: 50%;"></div> 
       </div> </li> 
      <li id="v56" class="item"> <span id="v57" class="name">力量传奇卡宠</span> 
       <div id="v58" class="rate-box"> 
-       <div id="v59" class="rate" style="width: 100%;"></div> 
+       <div id="v59" class="rate" style="width: 50%;"></div> 
       </div> </li> 
      <li id="v60" class="item"> <span id="v61" class="name">ohio(暂无)</span> 
       <div id="v62" class="rate-box"> 
-       <div id="v63" class="rate" style="width: 100%;"></div> 
+       <div id="v63" class="rate" style="width: 56%;"></div> 
       </div> </li> 
     </div> 
     <p id="v72" class="mods-end"></p> 
@@ -97,10 +106,10 @@
         <p id="v143" class="click-tip">Go</p> 
        </div> 
       </div> 
-  </div> 
-  <div id="v161" class="bottom">
-    ©法师 - 2024
-  </div> 
+     </li> 
+    </div> 
+    <p id="v161" class="bottom">©法师 - 2024</p> 
+   </div> 
   <script src="index.js?1015"></script> 
  </body>
 </html>
