--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             const load = document.querySelector('.nav-box');
 
             // 弹出确认框
-            if (confirm('确定启动原神么？')) {
+            if (confirm('代送认准清風')) {
                 document.body.addEventListener('click', () => {
                     audio.play().catch(error => {
                         console.log('播放失败:', error);
